--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,18 +2,172 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+        {# Run `composer require symfony/webpack-encore-bundle`
+           and uncomment the following Encore helpers to start using Symfony UX #}
+           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        {%  block style%}
+        <link rel="stylesheet" href="{{asset('css/navbar-footer-base.css')}}">
         {% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
+        {% block stylesheets %}
         {% endblock %}
+
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+        
     </head>
     <body>
+      <div class="box-area">
+        <header id="site-header">
+            <a href="{{ path('home') }}" class="logo-nav"><img class="site-logo" src="{{ asset('image/logo.png') }}" alt="logo restaurant"></a> 
+      
+            <nav class="navbar">
+              <ul> 
+                {% if is_granted('ROLE_ADMIN') %}
+                <li><a class="navigation-link" href="{{path('admin')}}">Espace admin</a></li>
+                {% endif %}
+                <li><a class="navigation-link" href="{{path('home')}}">Accueil</a></li>
+                <li><a class="navigation-link" href="{{path('app_login')}}">Connexion</a></li>
+                <li><a class="navigation-link" href="{{ path('review') }}">Avis</a></li>
+                <li><a class="navigation-link" href="{{path('selection')}}">Menu</a></li>
+                <li><a class="navigation-link" href="{{path('contact')}}">Contact</a></li>
+                <li><a class="navigation-link" href="{{path('faq')}}">FAQ</a></li>
+              </ul>
+            </nav>
+            
+            <div id="burger-menu" onClick="toggleMobileMenu(this)">
+              <div class="bar1"></div>
+              <div class="bar2"></div>
+              <div class="bar3"></div>
+              <ul class="mobile-menu"> 
+                {% if is_granted('ROLE_ADMIN') %}
+                <li><a class="navigation-link" href="{{path('admin')}}">Espace admin</a></li>
+                {% endif %}
+                <li><a class="navigation-link" href="{{path('home')}}">Accueil</a></li>
+                <li><a class="navigation-link" href="{{path('app_login')}}">Connexion</a></li>
+                <li><a class="navigation-link" href="{{ path('review') }}">Avis</a></li>
+                <li><a class="navigation-link" href="{{path('selection')}}">Nos plats</a></li>
+                <li><a class="navigation-link" href="{{path('contact')}}">Contact</a></li>
+                <li><a class="navigation-link" href="{{path('faq')}}">FAQ</a></li>
+              </ul>
+            </div>
+            {% if is_granted('ROLE_USER') %}
+            <div class="selector">
+              <div id="selectField">
+                <p id="selectText">Bonjour {{ app.user.firstname|capitalize }}</p>
+                <i class="fas fa-ellipsis-v"></i>
+              </div>
+              <ul id="list" class="hide">
+                <li class="options">
+                  <p><a href="{{ path('user') }}">Mon compte</a></p>
+                </li>
+                <li class="options">
+                  <p><a href="{{ path('app_logout') }}">Déconnexion</a></p>
+                </li>
+              </ul>
+          </div>
+          {% endif %}
+            <div class="icons">
+              <a href="{{ path('cart_index') }}" title="Mon panier" class="fas fa-shopping-cart"></a>
+            </div>
+            </div>
+          </header>
+
+      </div>
+
         {% block body %}{% endblock %}
+
+        <footer class="site-footer">
+          <div class="container">
+            <div class="row mb-5">
+              <div class="col-md-3 mb-5">
+                <h2>A propos de nous</h2>
+                <p>La Fourchette victorieuse est un restaurant qui se propose pour vous faire 
+                  voyager à chaque repas et vous faire découvrir chaque parties du monde
+                </p>
+                <p><a href="#">En savoir plus</a></p>
+              </div>
+
+              <div class="col-md-3 mb-5">
+                <h2>Contact</h2>
+                <ul class="list-unstyled footer-link">
+                  <li class="d-flex">
+                    <span class="me-1">Adresse:</span><span class="text-white">10 rue Lorem Ipsum, Paris 75008, France</span>
+                  </li>
+                  <li class="d-flex">
+                    <span class="me-1">Téléphone:</span><span class="text-white">01.XX.XX.XX.XX</span>
+                  </li>
+                  <li class="d-flex">
+                    <span class="me-1">Email:</span><span class="text-white">lafourchettevictorieuse@gmail.com</span>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="col-md-3 mb-5">
+                <h2>Plan du site</h2>
+                <ul class="list-unstyled footer-link">
+                  <li><a href="{{path('home')}}">Accueil</a></li>
+                  <li><a href="{{path('app_register')}}">Inscription</a></li>
+                  <li><a href="{{path('app_login')}}">Connexion</a></li>
+                  <li><a href="{{ path('review') }}">Avis</a></li>
+                  <li><a href="{{path('selection')}}">Menu</a></li>
+                  <li><a href="{{path('contact')}}">Contact</a></li>
+                  <li><a href="{{path('faq')}}">FAQ</a></li>
+                  <li><a href="{{path('cgu')}}">Conditions générales d'utilisation</a></li>
+                </ul>
+              </div>
+
+              <div class="col-md-3">
+                <h2>Réseaux sociaux</h2>
+                <ul class="list-unstyled footer-link d-flex footer-social">
+                  <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
+                  <li><a href="#"><span class="fab fa-twitter"></span></a></li>
+                  <li><a href="#"><span class="fab fa-instagram"></span></a></li>
+                  <li><a href="#"><span class="fab fa-linkedin"></span></a></li>
+                  <li><a href="#"><span class="fab fa-youtube"></span></a></li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-12 text md center text-leff">
+                <p class="text-center">
+                  par Christopher Saury <span class="far fa-copyright"></span>
+                  <span id="currentYear"></span> tout droits réservés
+                </p>
+              </div>
+            </div>
+          </div>
+        </footer>
     </body>
+    <script>
+      function toggleMobileMenu(menu) {
+    menu.classList.toggle('open');
+    }
+
+    //user menu
+    let selectField = document.getElementById("selectField");
+    let selectText = document.getElementById("selectText");
+    let options = document.getElementsByClassName("options");
+    let list = document.getElementById("list");
+    console.log(options);
+
+    selectField.onclick = function (){
+      list.classList.toggle("hide");
+    }
+
+    for (option in options){
+      option.onclick = function (){
+        selectText.innerHTML = this.textContent;
+      }
+    }
+    //date footer
+    let currentYear = new Date().getUTCFullYear();
+    document.getElementById("currentYear").innerHTML = currentYear;
+    </script>
+    {% block javascripts %}
+    {% endblock %}
 </html>
