modification route fonction asset

--- a/templates/home/cgu.html.twig
+++ b/templates/home/cgu.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Conditions générales d'utilisations{% endblock %}
 
         {% block stylesheets %}
-        <link rel="stylesheet" href="{{ asset('asset/css/cgu.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/cgu.css') }}">
         {% endblock %}
 
 {% block body %}
