--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Inscription{% endblock %}
 
 {%  block stylesheets%}
-<link rel="stylesheet" href="{{asset('asset/css/sign_up.css')}}">
+<link rel="stylesheet" href="{{asset('css/sign_up.css')}}">
 {% endblock %}
 
 {% block body %}
@@ -16,7 +16,7 @@
     <div class="container-fluid register-page-container">
         <div class="row">
             <div class="register-bkg">
-                <img src="{{ asset('asset/image/burger.jpg') }}" alt="">
+                <img src="{{ asset('image/burger.jpg') }}" alt="">
             </div>
             <div class="register-form">
                 <h2 class="text-center mb-2">Créer un compte</h2>
