--- a/templates/selection/index.html.twig
+++ b/templates/selection/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Nos plats{% endblock %}
 
 {% block stylesheets %}
-<link rel="stylesheet" href="{{asset('asset/css/selection.css')}}">
+<link rel="stylesheet" href="{{asset('css/selection.css')}}">
 {% endblock %}
 
 {% block body %}
@@ -34,5 +34,5 @@
   </section>
 {% endblock %}
 {% block javascripts %}
-  <script src="{{ asset('asset/js/selection-filter.js') }}"></script>
+  <script src="{{ asset('js/selection-filter.js') }}"></script>
 {% endblock %}
