suppression de rubrique menu

--- a/templates/base-admin.html.twig
+++ b/templates/base-admin.html.twig
@@ -53,12 +53,6 @@
                             <span class="title">Commentaires</span>
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
-                            <span class="icon"><i class="fas fa-shopping-cart"></i></span>
-                            <span class="title">Commandes</span>
-                        </a>
-                    </li>
                         <li>
                             <a href="#">
                                 <span class="icon"><i class="fas fa-cogs"></i></span>
@@ -99,7 +93,7 @@
                 </div>
                 <!-- cards -->
                 <div class="cardBox">
-                    <div class="info-card">
+                    <!-- <div class="info-card">
                         <div>
                             <div class="numbers">0</div>
                             <div class="cardName">Nombre de commande</div>
@@ -107,7 +101,7 @@
                         <div class="iconBx">
                             <i class="far fa-eye"></i>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="info-card">
                         <div>
                             <div class="numbers">0</div>
@@ -136,7 +130,7 @@
             </div>
         </div>
     </body>
-    <script src="{{asset('asset/js/admin.js')}}"></script>
+    <script src="{{asset('js/admin.js')}}"></script>
     {% block javascripts %}
     {% endblock %}
 </html>
