--- a/templates/admin/dish/dish-list.html.twig
+++ b/templates/admin/dish/dish-list.html.twig
@@ -10,7 +10,7 @@
           <div class="d-flex align-content-between">
 
             <span><a href="{{ path('add_dish') }}">+ Ajouter un plat</a></span>
-            <span class="ml-5"><a href="{{ path('category') }}">+ Gérer les catégories</a></span>
+            <span style="margin-left: 15px;"><a href="{{ path('category') }}">+ Gérer les catégories</a></span>
           </div>
             <table class="table">
                 <thead style="background-color: #2C3E4E; color: white;">
