modification des fonction asset et ajout d'un alt

--- a/templates/cart/validation.html.twig
+++ b/templates/cart/validation.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Validation de commande{% endblock %}
 {% block stylesheets %}
-<link rel="stylesheet" href="{{asset('asset/css/cart-validation.css')}}">
+<link rel="stylesheet" href="{{asset('css/cart-validation.css')}}">
 {% endblock %}
 
 {% block body %}
