--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -16,7 +16,7 @@
     <div class="container-fluid register-page-container">
         <div class="row">
             <div class="register-bkg">
-                <img src="{{ asset('image/burger.jpg') }}" alt="">
+                <img src="{{ asset('image/burger.jpg') }}" alt="hamburger">
             </div>
             <div class="register-form">
                 <h2 class="text-center mb-2">Créer un compte</h2>
